--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ repositories {
 }
 
 dependencies {
+	implementation platform 'org.hibernate.orm:hibernate-platform:6.6.9.Final'
+
+	implementation 'org.postgresql:postgresql'
+	implementation 'org.hibernate.orm:hibernate-core'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
