Some progress with hibernate?

--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -3,6 +3,9 @@ hibernate.connection.url=http://localhost:5432/postgres
 hibernate.connection.username=postgres
 hibernate.connection.password=jellies
 
+# Other Hibernate properties
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 # Echo all executed SQL to console
 hibernate.show_sql=true
 hibernate.format_sql=true
@@ -10,3 +13,4 @@ hibernate.highlight_sql=true
 
 # Automatically export the schema
 hibernate.hbm2ddl.auto=create
+
