--- a/build.gradle
+++ b/build.gradle
@@ -18,15 +18,18 @@ repositories {
 }
 
 dependencies {
-	implementation platform 'org.hibernate.orm:hibernate-platform:6.6.9.Final'
+	/*implementation platform 'org.hibernate.orm:hibernate-platform:6.6.9.Final'*/
 
-	implementation 'org.postgresql:postgresql'
 	implementation 'org.hibernate.orm:hibernate-core'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.postgresql:postgresql'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	
 }
 
 tasks.named('test') {
